[SUREFIRE-1432] Add extension interface with two implementations for trimStackTrace

--- a/surefire-its/src/test/resources/surefire-818-ignored-tests-on-npe/pom.xml
+++ b/surefire-its/src/test/resources/surefire-818-ignored-tests-on-npe/pom.xml
@@ -31,6 +31,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
+                <configuration>
+                    <trimStackTrace>true</trimStackTrace>
+                </configuration>
             </plugin>
         </plugins>
     </build>
